# AlphaPose

./: pyproject.toml  setup.py
alphapose/: version.py
detector/nms/: nms_wrapper.py
detector/nms/src/: soft_nms_cpu.cpp
