[tool.poetry]
name = "alphapose"
version = "0.1.0"
description = ""
authors = ["Ray Suhyun Lee <raysuhyunlee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cython-bbox = "^0.1.5"
torch = "^2.4.0"
setuptools = "^72.2.0"
cython = "^3.0.11"
ninja = "^1.11.1.1"
tqdm = "^4.66.5"
natsort = "^8.4.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
torchvision = "^0.19.0"
scipy = "^1.14.0"
easydict = "^1.13"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
